# rift

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  demo.tape
.github/workflows/: homebrew.yml  release.yml
Formula/: rift.rb
crates/pk-cli/: Cargo.toml
crates/pk-cli/src/cli/: connect.rs  info.rs  share.rs
crates/pk-cli/src/tui/: app.rs  mod.rs  ui.rs
crates/pk-core/: Cargo.toml
crates/pk-core/src/: config.rs  lib.rs  protocol.rs
crates/pk-core/src/network/: identity.rs  transport.rs
crates/pk-core/src/proxy/: mod.rs
crates/pk-core/tests/: smoke_test.rs  tunnel_integration.rs
crates/pk-daemon/: Cargo.toml
crates/pk-daemon/src/: lib.rs  server.rs  session.rs
crates/wh-cli/: Cargo.toml
crates/wh-cli/src/: main.rs
crates/wh-cli/src/cli/: connect.rs  info.rs  mod.rs  share.rs
crates/wh-cli/src/tui/: app.rs  mod.rs  ui.rs
crates/wh-core/: Cargo.toml
crates/wh-core/src/: brand.rs  config.rs  crypto.rs  error.rs  lib.rs  protocol.rs  secrets.rs
crates/wh-core/src/network/: behaviour.rs  identity.rs  mod.rs  swarm.rs  transport.rs
crates/wh-core/src/proxy/: listener.rs  mod.rs  tunnel.rs
crates/wh-core/tests/: approval_test.rs  secrets_test.rs  smoke_test.rs  tunnel_integration.rs
crates/wh-daemon/: Cargo.toml
crates/wh-daemon/src/: lib.rs  server.rs  session.rs
docs/: HOW_IT_WORKS.md  SECURITY.md  USAGE.md  USE_CASES.md
