[workspace]
members = ["crates/pk-cli", "crates/pk-core", "crates/pk-daemon"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PortKey Contributors"]
license = "MIT"
repository = "https://github.com/portkey/portkey"
description = "Local-First P2P tunneling tool - ngrok alternative with QUIC"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# libp2p for P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "quic",
    "noise",
    "yamux",
    "identify",
    "relay",
    "dcutr",
    "ping",
    "mdns",
    "macros",
    "dns",
    "tcp",
] }
libp2p-stream = "0.2.0-alpha"

# Tokio utilities
tokio-util = { version = "0.7", features = ["compat"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Secrets Management
keyring = "3"
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Error Handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1.9"
dotenv = "0.15"
tempfile = "3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }

# Internal crates
pk-core = { path = "crates/pk-core" }
pk-daemon = { path = "crates/pk-daemon" }
