[package]
name = "wh-cli"
version.workspace = true
edition.workspace = true
description = "CLI interface for Wormhole P2P tunneling tool"

[[bin]]
name = "rift"
path = "src/main.rs"

[dependencies]
wh-core = { workspace = true }
wh-daemon = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
