[package]
name = "wh-core"
version.workspace = true
edition.workspace = true
description = "Core P2P networking and tunneling logic for Wormhole"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
libp2p-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
dotenv = { workspace = true }
tempfile = { workspace = true }
keyring = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
